# lake-house

./: .env  .gitignore  DE-ReadMe.md  README.md  app.py  athena_start_query.json  check_athena_query.py  check_iam_permissions.py  check_parquet.py  check_table.py  check_table_location.py  compare_schemas.py  create_etl_workflow_states_table.py  env_file.txt  etl_workflow_state.py  launch.json  main.py  pyproject.toml  read_parquet.py  requirements-test.txt  requirements.txt  rewrite_parquet.py  run_tests.sh  setup.py  test_env.py  test_etl_workflow_integration.py  tsconfig.json  update_table_location.py
src/etl_architect_agent_v2/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  run_ui.sh  set_aws_env.sh  setup.py  test_database_config_agent.py  test_lakehouse_builder_demo.py  test_schema_extractor_demo.py  test_schema_extractor_demo_agentic.py  test_ui_demo.py
src/etl_architect_agent_v2/agents/: catalog_agent.py  company_analyzer.py  csv_cleaner.py  database_config_agent.py  etl_architect_agent.py  example_agent.py  glue_crawler_client.py  lakehouse_agent.py  researcher.py  schema_extractor_agent.py
src/etl_architect_agent_v2/api/: main.py  websocket.py
src/etl_architect_agent_v2/backend/: __init__.py  auth.py  config.py  dependencies.py  main.py
src/etl_architect_agent_v2/config/: setup_aws.py
src/etl_architect_agent_v2/context/: agent_context.py
src/etl_architect_agent_v2/core/: agent_orchestrator.py  db_connection_manager.py  error_handler.py  file_processor.py  llm_manager.py  llm_workflow.py  (+6 more)
(+302 files in other folders)
